--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Посмотри в окно</title>
+    <meta name="description" content="Сайт с видео из окон разных городов" />
+    <meta property="og:title" content="Посмотри в окно" />
+    <meta property="og:description" content="Медитативные видео из окон разных городов" />
+    <meta property="og:image" content="https://code.s3.yandex.net/web-code/cw/cover.jpg" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/preloader.css" />
@@ -14,74 +18,48 @@
     <main class="content">
       <section class="result">
         <div class="result__video-container">
-          <video src="" controls class="result__video" poster=""></video>
+          <video class="result__video" controls poster=""></video>
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
             <h2 class="search-form__fieldset-title">Город</h2>
             <label class="search-form__label">
               <span class="search-form__label-text visually-hidden">Город</span>
-              <input
-                type="text"
-                placeholder="Санкт Петербург, например"
-                name="city"
-                class="search-form__textfield"
-              />
+              <input class="search-form__textfield" type="text" placeholder="Санкт Петербург, например" name="city" />
             </label>
           </fieldset>
           <fieldset class="search-form__fieldset">
             <h2 class="search-form__fieldset-title">Время суток</h2>
             <div class="search-form__checkbox-list">
               <label class="search-form__label">
-                <input
-                  type="checkbox"
-                  name="time"
-                  value="morning"
-                  class="search-form__checkbox visually-hidden"
-                />
+                <input class="search-form__checkbox visually-hidden" type="checkbox" name="time" value="morning" />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Утро</span>
               </label>
               <label class="search-form__label">
-                <input
-                  type="checkbox"
-                  name="time"
-                  value="afternoon"
-                  class="search-form__checkbox visually-hidden"
-                />
+                <input class="search-form__checkbox visually-hidden" type="checkbox" name="time" value="afternoon" />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">День</span>
               </label>
               <label class="search-form__label">
-                <input
-                  type="checkbox"
-                  name="time"
-                  value="night"
-                  class="search-form__checkbox visually-hidden"
-                />
+                <input class="search-form__checkbox visually-hidden" type="checkbox" name="time" value="night" />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Ночь</span>
               </label>
             </div>
           </fieldset>
-          <button type="submit" class="button search-form__submit-button">
-            Найти
-          </button>
+          <button class="button search-form__submit-button" type="submit">Найти</button>
         </form>
       </section>
       <section class="content__details">
         <h1 class="title">
           <span class="content__accent">По-</span><br />смотри<br />в окно
         </h1>
-        <div class="content__list-container">
-          <ul class="content__list">
-            <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
-          </ul>
+        <div class="content__list-container custom-scrollbar">
+          <ul class="content__list"></ul>
         </div>
       </section>
     </main>
-
-    <!-- ТЕМПЛЕЙТЫ -->
 
     <template class="preloader-template">
       <div class="preloader">
@@ -102,20 +80,22 @@
               <h2 class="content__video-card-title"></h2>
               <p class="content__video-card-description"></p>
             </div>
-            <img src="" alt="" class="content__video-card-thumbnail" />
+            <img class="content__video-card-thumbnail" src="" alt="" />
           </article>
         </a>
       </li>
     </template>
+
     <template class="more-button-template">
       <button class="button more-button">Показать еще</button>
     </template>
 
     <template class="error-template">
       <div class="error">
-        <h2 class="error__title">Из этого города нет видео :(</h2>
+        <h2 class="error__title"></h2>
       </div>
     </template>
+
     <script src="./scripts/script.js"></script>
   </body>
 </html>
